[package]
name = "polyhaven"
version = "0.1.0"
authors = ["Elttob"]
edition = "2021"
license = "MIT"
description = "Rust interface around the PolyHaven web API"
repository = "https://github.com/Elttob/polyhaven-rs"
keywords = ["polyhaven", "web", "api", "3d", "assets"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"